--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = [
 ]
 dependencies = [
     "httpx>=0.27.0",
+    "pssapi>=0.5.1",
+    "pydantic>=2.8.2",
+    "python-dateutil>=2.9.0.post0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11.7"
