Add tests for converters

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "pss-fleet-data-client"
+name = "pss_fleet_data_client"
 version = "0.1.0"
 license = "MIT"
 description = "A client for the Pixel Starships Fleet Data API"
