--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dev-dependencies = [
     "pytest-env>=1.1.3",
     "vulture>=2.11",
     "pytest_httpx>=0.30.0",
+    "pytest-vcr>=1.0.2",
 ]
 
 [tool.hatch.metadata]
