Fix specifying default api key

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,3 +20,5 @@ asyncio_mode = auto
 filterwarnings =
     ignore::DeprecationWarning
     ignore::UserWarning
+env = 
+    TEST_DEFAULT_API_KEY=123456
