--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
-name = "pss_fleet_data_client"
+name = "pss-fleet-data-client"
 version = "0.1.0"
 license = "MIT"
-description = "A client for the Pixel Starships Fleet Data API"
+description = "A client for the Pixel Starships Fleet Data API."
 authors = [
     {name = "The worst.", email = "theworstpss@gmail.com"}
 ]
@@ -30,7 +30,6 @@ dev-dependencies = [
     "isort>=5.13.2",
     "pytest>=7.2.1",
     "pytest-asyncio>=0.23.7",
-    "pytest-cov>=4.1.0",
     "pytest-env>=1.1.3",
     "vulture>=2.11",
     "pytest_httpx>=0.30.0",
