--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [project]
 name = "pss-fleet-data-client"
-version = "0.1.0"
+version = "0.1.1"
 license = "MIT"
-description = "A client for the Pixel Starships Fleet Data API"
+description = "A client for the Pixel Starships Fleet Data API."
 authors = [
     {name = "The worst.", email = "theworstpss@gmail.com"}
 ]
 dependencies = [
     "httpx>=0.27.0",
+    "pssapi>=0.5.1",
+    "pydantic>=2.8.2",
+    "python-dateutil>=2.9.0.post0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11.7"
@@ -27,10 +30,10 @@ dev-dependencies = [
     "isort>=5.13.2",
     "pytest>=7.2.1",
     "pytest-asyncio>=0.23.7",
-    "pytest-cov>=4.1.0",
     "pytest-env>=1.1.3",
     "vulture>=2.11",
     "pytest_httpx>=0.30.0",
+    "pytest-vcr>=1.0.2",
 ]
 
 [tool.hatch.metadata]
