--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,37 @@
 [project]
 name = "pss-fleet-data-client"
-version = "0.4.0"
-license = {file = "LICENSE"}
 description = "A client for the Pixel Starships Fleet Data API."
+version = "0.4.0"
+requires-python = ">= 3.11"
+license = {file = "LICENSE"}
 authors = [
     {name = "The worst.", email = "theworstpss@gmail.com"}
+]
+readme = "README.md"
+keywords = [
+    "Pixel Starships",
+    "PSS",
+    "Fleet Data",
+]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Framework :: AsyncIO",
+    "Framework :: Pydantic",
+    "Framework :: Pydantic :: 2",
+    "License :: OSI Approved :: MIT License",
+    "Intended Audience :: Developers",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Topic :: Internet",
+    "Topic :: Software Development :: Libraries",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Utilities",
+    "Typing :: Typed",
 ]
 dependencies = [
     "httpx>=0.27.0",
@@ -12,8 +39,35 @@ dependencies = [
     "pydantic>=2.8.2",
     "python-dateutil>=2.9.0.post0",
 ]
-readme = "README.md"
-requires-python = ">= 3.11.7"
+
+[project.urls]
+Repository = "https://github.com/PSS-Tools-Development/pss-fleet-data-client"
+Issues = "https://github.com/PSS-Tools-Development/pss-fleet-data-client/issues"
+Changelog = "https://github.com/PSS-Tools-Development/pss-fleet-data-client/releases"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.version]
+path = "src/pss_fleet_data/__init__.py"
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.build.targets.wheel]
+packages = [
+    "src/pss_fleet_data",
+]
+
+[tool.hatch.build.targets.sdist]
+include = [
+  "src/pss_fleet_data/*",
+]
+exclude = [
+  "src/pss_fleet_data/__pycache__",
+  "src/pss_fleet_data/pss_fleet_data_client.egg-info",
+]
 
 [tool.rye]
 managed = true
