--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,9 @@ dev-dependencies = [
     "pytest_httpx>=0.30.0",
     "pytest-vcr>=1.0.2",
     "vulture>=2.11",
+    "pre-commit>=3.8.0",
+    "pytest-cov>=5.0.0",
+    "coverage>=7.6.0",
 ]
 
 [tool.autoflake]
@@ -98,7 +101,7 @@ target-version = ['py311']
 include = '\.pyi?$'
 
 [tool.isort]
-src_paths = ["src"]
+src_paths = ["./src", "./tests"]
 profile = "black"
 line_length = 150
 lines_after_imports = 2
