--- a/.github/workflows/check-and-test.yml
+++ b/.github/workflows/check-and-test.yml
@@ -31,4 +31,12 @@ jobs:
 
       - name: Test with pytest
         run: |
-          pytest ./tests -x
+          pytest -x --cov=./src/pss_fleet_data --cov-report xml:cov.xml
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          fail_ci_if_error: true
+          files: ./cov.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
