--- a/.github/workflows/check-and-test.yml
+++ b/.github/workflows/check-and-test.yml
@@ -24,14 +24,20 @@ jobs:
           python -m pip install -r requirements-dev.lock
         shell: bash
 
-      - name: Check with flake8
+      - name: Install dependencies for Codecov
+        run: >
+          apt-get update &&
+          apt-get install --no-install-recommends --yes
+          ca-certificates curl git gpg gpg-agent
+
+      - name: Check with flake8 & vulture
         run: |
           flake8 ./src
           vulture ./src
 
       - name: Test with pytest
         run: |
-          pytest -x --cov=./src/pss_fleet_data --cov-report xml:cov.xml
+          pytest -x --cov=./src/pss_fleet_data --cov-report=xml
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4
