--- a/.github/workflows/check-and-test.yml
+++ b/.github/workflows/check-and-test.yml
@@ -4,7 +4,9 @@ name: Check and Test
 
 on:
   pull_request:
-    branches: ["main", "release/*", "hotfix/*"]
+    branches: ["release/*", "hotfix/*"]
+  push:
+    branches: ["main"]
 
 permissions:
   contents: read
