--- a/.github/workflows/check-and-test.yml
+++ b/.github/workflows/check-and-test.yml
@@ -4,7 +4,9 @@ name: Check and Test
 
 on:
   pull_request:
-    branches: ["main", "release/*", "hotfix/*"]
+    branches: ["release/*", "hotfix/*"]
+  push:
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -24,11 +26,25 @@ jobs:
           python -m pip install -r requirements-dev.lock
         shell: bash
 
-      - name: Check with flake8
+      - name: Install dependencies for Codecov
+        run: >
+          apt-get update &&
+          apt-get install --no-install-recommends --yes
+          ca-certificates curl git gpg gpg-agent
+
+      - name: Check with flake8 & vulture
         run: |
           flake8 ./src
           vulture ./src
 
       - name: Test with pytest
         run: |
-          pytest ./tests -x
+          pytest -x --cov=./src/pss_fleet_data --cov-report=xml
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          fail_ci_if_error: true
+          files: ./cov.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
