--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,19 +74,20 @@ managed = true
 dev-dependencies = [
     "autoflake>=2.3.1",
     "black>=24.4.2",
+    "coverage>=7.6.0",
     "flake8>=7.1.0",
     "flake8-black>=0.3.6",
     "flake8-bugbear>=24.4.26",
     "isort>=5.13.2",
+    "pre-commit>=3.8.0",
+    "pyment>=0.3.3",
     "pytest>=7.2.1",
     "pytest-asyncio>=0.23.7",
+    "pytest-cov>=5.0.0",
     "pytest-env>=1.1.3",
     "pytest_httpx>=0.30.0",
     "pytest-vcr>=1.0.2",
     "vulture>=2.11",
-    "pre-commit>=3.8.0",
-    "pytest-cov>=5.0.0",
-    "coverage>=7.6.0",
 ]
 
 [tool.autoflake]
