--- a/.github/workflows/check-and-test.yml
+++ b/.github/workflows/check-and-test.yml
@@ -4,9 +4,7 @@ name: Check and Test
 
 on:
   pull_request:
-    branches: ["release/*", "hotfix/*"]
-  push:
-    branches: ["main"]
+    branches: ["main", "release/*", "hotfix/*"]
 
 permissions:
   contents: read
