Run check & test on push to main as well (for coverage check)

--- a/.github/workflows/check-and-test.yml
+++ b/.github/workflows/check-and-test.yml
@@ -5,6 +5,8 @@ name: Check and Test
 on:
   pull_request:
     branches: ["main", "release/*", "hotfix/*"]
+  push:
+    branches: ["main"]
 
 permissions:
   contents: read
